# server/swagger.js
@@ -1,75 +1,0 @@
-const swaggerAutogen = require('swagger-autogen')()
-
-const outputFile = './swagger_out.json'
-const endpointsFiles = ['./routes/index.js']
-
-const doc = {
-    info: {
-        version: "1.0.0",
-        title: "My API",
-        description: "Documentation automatically generated by the <b>swagger-autogen</b> module."
-    },
-    host: "localhost:8080",
-    basePath: "/api",
-    schemes: ['http', 'https'],
-    consumes: ['application/json'],
-    produces: ['application/json'],
-    tags: [
-        {
-            "name": "User",
-            "description": "Endpoints"
-        }
-    ],
-  /*   securityDefinitions: {
-        api_key: {
-            type: "apiKey",
-            name: "api_key",
-            in: "header"
-        },
-        petstore_auth: {
-            type: "oauth2",
-            authorizationUrl: "https://petstore.swagger.io/oauth/authorize",
-            flow: "implicit",
-            scopes: {
-                read_pets: "read your pets",
-                write_pets: "modify pets in your account"
-            }
-        }
-    }, */
-    definitions: {
-        User: {
-            email: "mail@example.com",
-            firstName: "Jhon",
-            lastName: "Doh",
-            UserType: 'USER'
-        },
-        Customer: {
-            email: "mail@example.com",
-            firstName: "Jhon",
-            lastName: "Doh",
-            UserType: 'USER',
-            address: 'The Road 123',
-            postcode: '1234',
-            city: 'Paradise City',
-            Orders: ['']
-        },
-        Product: {
-            name: "Cool t-shirt",
-            price: 250.00,
-            lastName: "Doh",
-            description: "Very very cool thing",
-            shortDescription: 'Cool thing',
-            imageUrl: 'www.image.com/cool-shirt',
-            stockQuantity: 4,
-        },
-        Order: {
-            createdAt: "2004-12-12",
-            orderStatus: 'AWAITNG PAYMENT',
-            customer: "CustomerRef",
-            total: 1250.00,
-            products: ['products'],
-        },
-    }
-}
-
-swaggerAutogen(outputFile, endpointsFiles, doc)
